# music-recommender

./: DATA_LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
data/: music_catalog.csv
scripts/: prepare_fma.py  prepare_spotify.py
src/musicrec/: __init__.py  evaluation.py  model.py
tests/: test_model.py
