[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-recommender"
version = "0.1.0"
description = "Explainable content-based music recommendation app"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pandas>=2.1", "streamlit>=1.35"]

[tool.setuptools.packages.find]
where = ["src"]
